--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "predeploy":"npm run build",
-    "deploy": "gh-pages -d dist"
+    "astro": "astro"
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.3",
     "astro": "^5.0.2",
     "tailwindcss": "^3.4.16"
+  },
+  "devDependencies": {
   }
 }
